--- a/MassFricGauss0102.ipynb
+++ b/MassFricGauss0102.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,8 +103,10 @@
     "        self.regularizedFlag = regularizedFlag\n",
     "        \n",
     "        # Generate the sequence\n",
+    "        st = time.time()\n",
     "        self.default_y = self.calculateYAtT(self.t)\n",
-    "        \n",
+    "        self.time_cost = time.time() - st\n",
+    "        # print(\"Time cost to generate the sequence: \", self.time_cost)\n",
     "        \n",
     "    # Function DyDt, DyDt = f(t, y)\n",
     "    def DyDt(self, t, y):\n",
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,6 +280,7 @@
     "            iptSeq = TimeSequenceGen(self.T, self.NofTPts, MFParams, rtol = self.rtol, \n",
     "                                     atol = self.atol, regularizedFlag = self.regularizedFlag)\n",
     "            sequences.append(iptSeq.default_y)\n",
+    "        \n",
     "        # Return time\n",
     "        return torch.stack(sequences, 0)\n",
     "    \n",
@@ -292,31 +295,30 @@
     "        \n",
     "        # Get the observations\n",
     "        if self.fourierFlag:\n",
-    "            # Find the Fourier coefficients\n",
-    "            FourierTerms = self.FourierTerms\n",
-    "            T = self.T\n",
     "    \n",
     "            # Compute the Fourier terms\n",
     "            times = torch.linspace(0., self.T, self.NofTPts)\n",
-    "            Ks = torch.tensor(range(FourierTerms))\n",
-    "            coskPiTt = torch.cos(Ks.reshape([-1, 1]) * torch.pi / T * times)\n",
-    "            VxcoskPiTt = torch.concat([coskPiTt * Vxi.reshape([1, -1]) for Vxi in self.rawSeqs], 0)\n",
-    "\n",
-    "            # Compute the fourier coefficients\n",
-    "            # print('time.shape: ', time.shape)\n",
-    "            observation = torch.trapezoid(VxcoskPiTt, x=times)\n",
-    "            # print(\"observation shape: \", observation.shape)\n",
-    "            # Append the result from this file\n",
-    "            Observations.append(observation)\n",
+    "            Ks = torch.tensor(range(self.FourierTerms))\n",
+    "            coskPiTt = torch.cos(Ks.reshape([-1, 1]) * torch.pi / self.T * times)\n",
+    "            \n",
+    "            for Vxi in self.rawSeqs:\n",
+    "                VxcoskPiTt = coskPiTt * Vxi.reshape([1, -1])\n",
+    "                \n",
+    "                # Compute the fourier coefficients\n",
+    "                # print('time.shape: ', time.shape)\n",
+    "                observation = torch.trapezoid(VxcoskPiTt, x=times)\n",
+    "                # print(\"observation shape: \", observation.shape)\n",
+    "                # Append the result from this file\n",
+    "                Observations.append(observation)\n",
     "        else:\n",
-    "            # Find nFourier terms of values, evenly spaced in [0, T]\n",
+    "            # Find self.FourierTerms terms of values, evenly spaced in [0, T]\n",
     "            times = torch.linspace(0., self.T, self.NofTPts)\n",
     "            tts = torch.linspace(0., self.T, self.FourierTerms)\n",
     "            observation_func = interp1d(times, self.rawSeqs)\n",
-    "            Observations = torch.tensor(observation_func(tts))\n",
+    "            Observations = torch.tensor(observation_func(tts).transpose())\n",
     "            \n",
     "            # DEBUG LINES Print Observations shape\n",
-    "            print(\"Observations shape: \", Observations)\n",
+    "            print(\"Observations shape: \", Observations.shape)\n",
     "        return Observations\n",
     "    \n",
     "    "
@@ -400,10 +402,9 @@
     "# Define Bayersian Inv that solves a Bayersian inversion problem\n",
     "class BayersianInv:\n",
     "    # Constructor\n",
-    "    def __init__(self, u_low, u_high, u, y, work_path, FourierTerms = 16, \n",
-    "                 atol = 1.0e-6, si_eta = 0.5, n_samples = 20, MCMCsteps = 1000, nThreads = 16, \n",
-    "                 save_path = \"./\", distanceAbove = 2e-3, nOfQueryPts = 10, obsFlag = 'fault', \n",
-    "                 fourierFlag = False, samplesFlag = 'sampling'):\n",
+    "    def __init__(self, u_low, u_high, u, y, work_path, T, NofTPts, exampleMF, fourierTerms = 16, \n",
+    "                 rtol = 1.e-6, atol = 1.e-8, si_eta = 0.5, n_samples = 20, MCMCsteps = 1000, nThreads = 16, \n",
+    "                 save_path = \"./\", fourierFlag = False, samplesFlag = 'sampling'):\n",
     "        # Set X has to be compact in R^k\n",
     "        self.real_u_idx = np.array((u_low != u_high))\n",
     "        self.u_low = np.array(u_low[self.real_u_idx])\n",
@@ -428,8 +429,13 @@
     "        self.input_dim = len(self.u_low)\n",
     "        self.output_dim = len(self.y)\n",
     "        self.work_path = work_path\n",
-    "        self.FourierTerms = FourierTerms\n",
+    "        self.MF = exampleMF\n",
+    "        self.T = T\n",
+    "        self.NofTPts = NofTPts\n",
+    "        self.FourierTerms = fourierTerms\n",
     "        self.atol = atol\n",
+    "        self.rtol = rtol\n",
+    "        \n",
     "        self.si_eta = si_eta\n",
     "        self.n_samples = n_samples\n",
     "        self.MCMCsteps = MCMCsteps\n",
@@ -442,8 +448,8 @@
     "        \n",
     "        # Get where the observations are from\n",
     "        self.obsFlag = obsFlag\n",
-    "        self.fourierFlag = fourierFlag\n",
-    "        self.samplesFlag = samplesFlag\n",
+    "        self.FourierFlag = fourierFlag\n",
+    "        self.SamplesFlag = samplesFlag\n",
     "        \n",
     "        # Keep records of the sampled points and the corresponding observations after iteration\n",
     "        self.U = np.empty([0, self.input_dim])\n",
@@ -610,9 +616,12 @@
     "            print(\"self.RectsArea length: \", len(self.RectsArea))\n",
     "\n",
     "        # Run the forward map with the samples\n",
-    "        myBatch = RunABatch(self.castU(self.samples), self.work_path, FourierTerms = self.FourierTerms, \n",
-    "                            distanceAbove = self.distanceAbove, nOfQueryPts = self.nOfQueryPts, \n",
-    "                            obsFlag = self.obsFlag, fourierFlag = self.fourierFlag, nThreads = self.nThreads)\n",
+    "        myBatch = RunABatch(self.input_set, self.T, self.NofTPts, self.rtol, self.atol, self.regularizedFlag, \n",
+    "                            self.MF,       # TimeSeqGeneration parameters\n",
+    "                            self.FourierTerms, self.nThreads, self.FourierFlag)\n",
+    "#         myBatch = RunABatch(self.castU(self.samples), self.work_path, FourierTerms = self.FourierTerms, \n",
+    "#                             distanceAbove = self.distanceAbove, nOfQueryPts = self.nOfQueryPts, \n",
+    "#                             obsFlag = self.obsFlag, fourierFlag = self.fourierFlag, nThreads = self.nThreads)\n",
     "        self.U = np.append(self.U, self.samples, axis = 0)\n",
     "        self.O = np.append(self.O, myBatch.Observations, axis = 0)\n",
     "\n",
@@ -1243,7 +1252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1257,7 +1266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
