--- a/MassFricGauss0102.ipynb
+++ b/MassFricGauss0102.ipynb
@@ -402,7 +402,7 @@
     "# Define Bayersian Inv that solves a Bayersian inversion problem\n",
     "class BayersianInv:\n",
     "    # Constructor\n",
-    "    def __init__(self, u_low, u_high, u, y, work_path, T, NofTPts, exampleMF, fourierTerms = 16, \n",
+    "    def __init__(self, u_low, u_high, u, y, T, NofTPts, exampleMF, fourierTerms = 16, \n",
     "                 rtol = 1.e-6, atol = 1.e-8, si_eta = 0.5, n_samples = 20, MCMCsteps = 1000, nThreads = 16, \n",
     "                 save_path = \"./\", fourierFlag = False, samplesFlag = 'sampling'):\n",
     "        # Set X has to be compact in R^k\n",
@@ -428,7 +428,6 @@
     "        self.input_dim_All = len(u_low)\n",
     "        self.input_dim = len(self.u_low)\n",
     "        self.output_dim = len(self.y)\n",
-    "        self.work_path = work_path\n",
     "        self.MF = exampleMF\n",
     "        self.T = T\n",
     "        self.NofTPts = NofTPts\n",
