--- a/MassFricGauss0102.ipynb
+++ b/MassFricGauss0102.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +218,7 @@
     "        self.m = exampleMF.m\n",
     "        self.V = exampleMF.V\n",
     "        self.g = exampleMF.g\n",
+    "        self.y0 = exampleMF.y0\n",
     "        \n",
     "        self.FourierTerms = fourierTerms\n",
     "        self.FourierFlag = fourierFlag\n",
@@ -233,7 +234,7 @@
     "        self.rawSeqs = self.runCases(self.input_set_toRun, self.nThreads)\n",
     "        \n",
     "        # Get obsevations\n",
-    "        self.Observations = self.getObservations(self.rawSeqs, self.FourierFlag, self.FourierTerms)\n",
+    "        self.Observations = self.getObservations()\n",
     "        \n",
     "    # Function runCases\n",
     "    def runCases(self, input_set, nThreads):\n",
@@ -272,7 +273,7 @@
     "        self.casesExcuted = True\n",
     "        \n",
     "        # Return raw sequences\n",
-    "        rawSeqs = torch.stack(sequences, 0)\n",
+    "        rawSeqs = torch.concat(sequences, 0)\n",
     "        \n",
     "        return rawSeqs \n",
     "    \n",
@@ -281,13 +282,14 @@
     "        # Run sequences in input_set one by one\n",
     "        sequences = []\n",
     "        for ipt in input_set:\n",
-    "            MFParams = MassFricParams(self.k, self.m, self.V, self.g, torch.tensor(ipt))\n",
+    "            MFParams = MassFricParams(self.k, self.m, self.V, self.g, torch.tensor(ipt), self.y0)\n",
     "            iptSeq = TimeSequenceGen(self.T, self.NofTPts, MFParams, rtol = self.rtol, \n",
     "                                     atol = self.atol, regularizedFlag = self.regularizedFlag)\n",
-    "            sequences.append(iptSeq.default_y.reshape([1, -1]))\n",
+    "            \n",
+    "            sequences.append(iptSeq.default_y[1, :].reshape([1, -1]))\n",
     "        \n",
     "        # Return time\n",
-    "        return torch.stack(sequences, 0)\n",
+    "        return torch.concat(sequences, 0)\n",
     "    \n",
     "    # Function getObservations for the input_set\n",
     "    def getObservations(self):\n",
@@ -299,31 +301,33 @@
     "            return Observations\n",
     "        \n",
     "        # Get the observations\n",
-    "        if self.fourierFlag:\n",
+    "        if self.FourierFlag:\n",
     "    \n",
     "            # Compute the Fourier terms\n",
-    "            times = torch.linspace(0., self.T, self.NofTPts)\n",
+    "            self.times = torch.linspace(0., self.T, self.NofTPts)\n",
     "            Ks = torch.tensor(range(self.FourierTerms))\n",
-    "            coskPiTt = torch.cos(Ks.reshape([-1, 1]) * torch.pi / self.T * times)\n",
+    "            coskPiTt = torch.cos(Ks.reshape([-1, 1]) * torch.pi / self.T * self.times)\n",
     "            \n",
     "            for Vxi in self.rawSeqs:\n",
     "                VxcoskPiTt = coskPiTt * Vxi.reshape([1, -1])\n",
     "                \n",
     "                # Compute the fourier coefficients\n",
     "                # print('time.shape: ', time.shape)\n",
-    "                observation = torch.trapezoid(VxcoskPiTt, x=times)\n",
+    "                observation = torch.trapezoid(VxcoskPiTt, x=self.times)\n",
     "                # print(\"observation shape: \", observation.shape)\n",
     "                # Append the result from this file\n",
     "                Observations.append(observation)\n",
     "        else:\n",
     "            # Find self.FourierTerms terms of values, evenly spaced in [0, T]\n",
-    "            times = torch.linspace(0., self.T, self.NofTPts)\n",
-    "            tts = torch.linspace(0., self.T, self.FourierTerms)\n",
-    "            observation_func = interp1d(times, self.rawSeqs)\n",
-    "            Observations = torch.tensor(observation_func(tts).transpose())\n",
+    "            self.times = torch.linspace(0., self.T, self.NofTPts)\n",
+    "            self.tts = torch.linspace(0., self.T, self.FourierTerms)\n",
+    "            # print(\"Times size: \", self.times.shape)\n",
+    "            # print(\"self.rawSeqs size: \", self.rawSeqs.shape)\n",
+    "            observation_func = interp1d(self.times, self.rawSeqs)\n",
+    "            Observations = torch.tensor(observation_func(self.tts))\n",
     "            \n",
     "            # DEBUG LINES Print Observations shape\n",
-    "            print(\"Observations shape: \", Observations.shape)\n",
+    "            # print(\"Observations shape: \", Observations.shape)\n",
     "        return Observations\n",
     "    \n",
     "    "
@@ -338,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
@@ -891,23 +895,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Parallel' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [24]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Get target RSParams\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m Useq \u001b[38;5;241m=\u001b[39m \u001b[43mRunABatch\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtarg_RSParams\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m                                   \u001b[49m\u001b[38;5;66;43;03m# Inputs to run\u001b[39;49;00m\n\u001b[1;32m      3\u001b[0m \u001b[43m                 \u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mNofTPts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mthis_rtol\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mthis_atol\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mregularizedFlag\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarg_SpringSlider\u001b[49m\u001b[43m,\u001b[49m\u001b[43m   \u001b[49m\u001b[38;5;66;43;03m# TimeSeqGeneration parameters\u001b[39;49;00m\n\u001b[1;32m      4\u001b[0m \u001b[43m                 \u001b[49m\u001b[43mfourierTerms\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnThreads\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m16\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfourierFlag\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m u_low \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0.001\u001b[39m, \u001b[38;5;241m0.006\u001b[39m, \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.3\u001b[39m]\n\u001b[1;32m      8\u001b[0m u_high \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0.021\u001b[39m, \u001b[38;5;241m0.025\u001b[39m, \u001b[38;5;241m2.\u001b[39m, \u001b[38;5;241m0.9\u001b[39m]\n",
-      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36mRunABatch.__init__\u001b[0;34m(self, input_set, T, NofTPts, rtol, atol, regularizedFlag, exampleMF, fourierTerms, nThreads, fourierFlag)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minput_set_toRun \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minput_set))\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# Run cases\u001b[39;00m\n\u001b[0;32m---> 33\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrawSeqs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrunCases\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minput_set_toRun\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnThreads\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m# Get obsevations\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mObservations \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgetObservations(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrawSeqs, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mFourierFlag, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mFourierTerms)\n",
-      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36mRunABatch.runCases\u001b[0;34m(self, input_set, nThreads)\u001b[0m\n\u001b[1;32m     52\u001b[0m             split_threadNo \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, nRealThreads \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m     54\u001b[0m \u001b[38;5;66;03m#             # Print splits\u001b[39;00m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;66;03m#             for inputSet, tNo in zip(split_input_set, split_threadNo):\u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m#                 print(inputSet, tNo)\u001b[39;00m\n\u001b[1;32m     57\u001b[0m             \n\u001b[1;32m     58\u001b[0m             \u001b[38;5;66;03m# Submit the jobs\u001b[39;00m\n\u001b[0;32m---> 59\u001b[0m             sequences \u001b[38;5;241m=\u001b[39m \u001b[43mParallel\u001b[49m(n_jobs\u001b[38;5;241m=\u001b[39mnRealThreads, backend\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mthreading\u001b[39m\u001b[38;5;124m'\u001b[39m)(\n\u001b[1;32m     60\u001b[0m                 delayed(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrunCasesOneThread)(inputSet, tNo) \u001b[38;5;28;01mfor\u001b[39;00m inputSet, tNo \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(split_input_set, split_threadNo)\n\u001b[1;32m     61\u001b[0m             )\n\u001b[1;32m     62\u001b[0m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     63\u001b[0m             time_thread \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0.\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Parallel' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get target RSParams\n",
     "Useq = RunABatch([targ_RSParams],                                   # Inputs to run\n",
@@ -916,19 +906,33 @@
     "\n",
     "\n",
     "u_low = [0.001, 0.006, 0.5, 0.3]\n",
-    "u_high = [0.021, 0.025, 2., 0.9]"
+    "u_high = [0.021, 0.025, 2., 0.9]\n",
+    "u = targ_RSParams\n",
+    "y = Useq.Observations[0, :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "only integer scalar arrays can be converted to a scalar index",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [72]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m myInv \u001b[38;5;241m=\u001b[39m \u001b[43mBayersianInv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mu_low\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mu_high\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mNofTPts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarg_SpringSlider\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfourierTerms\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m                 \u001b[49m\u001b[43mrtol\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.e-6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43matol\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.e-8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msi_eta\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_samples\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mMCMCsteps\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnThreads\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m16\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m                 \u001b[49m\u001b[43msave_path\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m./\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfourierFlag\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msamplesFlag\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msampling\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [63]\u001b[0m, in \u001b[0;36mBayersianInv.__init__\u001b[0;34m(self, u_low, u_high, u, y, T, NofTPts, exampleMF, fourierTerms, rtol, atol, si_eta, n_samples, MCMCsteps, nThreads, save_path, fourierFlag, samplesFlag)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, u_low, u_high, u, y, T, NofTPts, exampleMF, fourierTerms \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m16\u001b[39m, \n\u001b[1;32m      5\u001b[0m              rtol \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.e-6\u001b[39m, atol \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.e-8\u001b[39m, si_eta \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.5\u001b[39m, n_samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m20\u001b[39m, MCMCsteps \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m, nThreads \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m16\u001b[39m, \n\u001b[1;32m      6\u001b[0m              save_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./\u001b[39m\u001b[38;5;124m\"\u001b[39m, fourierFlag \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, samplesFlag \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msampling\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;66;03m# Set X has to be compact in R^k\u001b[39;00m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreal_u_idx \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray((u_low \u001b[38;5;241m!=\u001b[39m u_high))\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mu_low \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(\u001b[43mu_low\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreal_u_idx\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mu_high \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(u_high[\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreal_u_idx])\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdummy_u \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(u_low[\u001b[38;5;241m~\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreal_u_idx])\n",
+      "\u001b[0;31mTypeError\u001b[0m: only integer scalar arrays can be converted to a scalar index"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "myInv = BayersianInv(u_low, u_high, u, y, T, NofTPts, exampleMF, fourierTerms = 16, \n",
+    "myInv = BayersianInv(u_low, u_high, u, y, T, NofTPts, targ_SpringSlider, fourierTerms = 1000, \n",
     "                 rtol = 1.e-6, atol = 1.e-8, si_eta = 0.5, n_samples = 20, MCMCsteps = 1000, nThreads = 16, \n",
-    "                 save_path = \"./\", fourierFlag = False, samplesFlag = 'sampling'))"
+    "                 save_path = \"./\", fourierFlag = False, samplesFlag = 'sampling')"
    ]
   },
   {
