--- a/MassFricAdj1219.ipynb
+++ b/MassFricAdj1219.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "from xitorch.interpolate import Interp1D\n",
     "from scipy.interpolate import interp1d\n",
     "from matplotlib import pyplot as plt\n",
+    "import pickle\n",
     "import time\n",
     "\n",
     "torch.set_default_dtype(torch.float)"
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,12 +499,347 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Fixed parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time cost to generate the sequence:  0.3256230354309082\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Fixed parameters\n",
+    "# Parameters for the spring-slider\n",
+    "k = 50.\n",
+    "m = 1.\n",
+    "V = 1.\n",
+    "g = 9.8\n",
+    "y0 = torch.tensor([0., 1.0, 1.0])\n",
+    "\n",
+    "# Sequence specific parameters\n",
+    "T = 5.\n",
+    "NofTPts = 1000\n",
+    "\n",
+    "# Tolerance parameters\n",
+    "this_rtol = 1.e-6\n",
+    "this_atol = 1.e-8\n",
+    "\n",
+    "# Generate target v\n",
+    "targ_RSParams = torch.tensor([0.011, 0.016, 1.e-3, 0.58])\n",
+    "targ_SpringSlider = MassFricParams(k, m, V, g, targ_RSParams, y0)\n",
+    "\n",
+    "targ_seq = TimeSequenceGen(T, NofTPts, targ_SpringSlider, rtol=this_rtol, atol=this_atol, regularizedFlag=False)\n",
+    "v = targ_seq.default_y[1, :]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Updating using gradient descent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function observation function\n",
+    "def objGradFunc(beta, targ_y, objOnly = False):\n",
+    "    # Generate target v\n",
+    "    this_RSParams = torch.tensor(beta)\n",
+    "    this_SpringSlider = MassFricParams(k, m, V, g, targ_RSParams, y0)\n",
+    "\n",
+    "    this_seq = TimeSequenceGen(T, NofTPts, targ_SpringSlider, \n",
+    "                               rtol=this_rtol, atol=this_atol, regularizedFlag=False)\n",
+    "    \n",
+    "    # Compute the value of objective function\n",
+    "    obj = O(this_seq.default_y, targ_y, this_seq.t, this_SpringSlider)\n",
+    "    \n",
+    "    # Compute dOdBeta\n",
+    "    if objOnly:\n",
+    "        grad = 0.\n",
+    "    else:\n",
+    "        myAdj = AdjDerivs(this_seq.default_y, targ_y, this_seq.t, this_SpringSlider, \n",
+    "                          rtol = 1.e-6, atol = 1.e-8)\n",
+    "        grad = myAdj.dOdBeta\n",
+    "        \n",
+    "    return obj, grad\n",
+    "\n",
+    "\n",
+    "# Give the initial position and gradient updating function\n",
+    "class GradDescent:\n",
+    "    # Constructor, initial value position\n",
+    "    def __init__(self, beta0, targ_y, t, objGrad_func, max_steps, obs_rtol = 1e-5, lsrh_steps = 4):\n",
+    "        # Initial parameters\n",
+    "        self.beta0 = beta0\n",
+    "        \n",
+    "        # Target sequence\n",
+    "        self.targ_y = targ_y\n",
+    "        \n",
+    "        # Time at which targ_y was observed\n",
+    "        self.t = t\n",
+    "        \n",
+    "        # Objective and gradient function\n",
+    "        self.objGrad_func = objGrad_func\n",
+    "        \n",
+    "        # Maximum number of steps allowed\n",
+    "        self.max_steps = max_steps\n",
+    "        \n",
+    "        # Tolerance of observation relative error\n",
+    "        self.obs_tol = obs_rtol\n",
+    "        \n",
+    "        # Sequence of parameters\n",
+    "        self.betas = [beta0]\n",
+    "        \n",
+    "        # Maximum line search steps\n",
+    "        self.lsrh_steps = lsrh_steps\n",
+    "        \n",
+    "        # Get Initial observations\n",
+    "        self.objs = []\n",
+    "    \n",
+    "    # First descent, cannot use Barzilai–Borwein stepping, using linesearch\n",
+    "    def firstDescent(self):\n",
+    "        # Compute obj and grad\n",
+    "        obj, grad = self.objGrad_func(self.betas[-1], self.targ_y)\n",
+    "        self.objs = [obj]\n",
+    "        self.grads = [grad]\n",
+    "        \n",
+    "        # Find stepsize\n",
+    "        maxStepSize = 0.1 * min(abs(beta0 / grad))\n",
+    "        \n",
+    "        # Line search\n",
+    "        stepSize = maxStepSize\n",
+    "        for i in range(self.lsrh_steps):\n",
+    "            beta_trial = self.beta0 - stepSize * grad\n",
+    "            obj_trial, grad_trial = self.objGrad_func(beta_trial, self.targ_y, objOnly = True)\n",
+    "            \n",
+    "            # Break if this beta is good\n",
+    "            if obj_trial < obj:\n",
+    "                break\n",
+    "            \n",
+    "            # Half the stepSize\n",
+    "            stepSize = stepSize / 2.\n",
+    "        \n",
+    "        # Append the betas and objs\n",
+    "        obj_trial, grad_trial = self.objGrad_func(beta_trial, self.targ_y, objOnly = False)\n",
+    "        self.betas.append(beta_trial)\n",
+    "        self.objs.append(obj_trial)\n",
+    "        self.grads.append(grad_trial)\n",
+    "        \n",
+    "        # Return if obj_trial is smaller than obj\n",
+    "        return obj_trial < obj\n",
+    "    \n",
+    "    # Run one descent using Barzilai–Borwein stepping\n",
+    "    def oneDescent(self):\n",
+    "        # Make sure there are more than 1 steps beforehand\n",
+    "        assert(len(self.objs) >= 2)\n",
+    "        \n",
+    "        # Calculate the step size\n",
+    "        stepSize = abs(torch.dot(self.betas[-1] - self.betas[-2], self.grads[-1] - self.grads[-2])) / \\\n",
+    "                   torch.sum(torch.square(self.grads[-1] - self.grads[-2]))\n",
+    "        beta_trial = self.betas[-1] - stepSize * self.grads[-1]\n",
+    "        \n",
+    "        # Append the betas and objs\n",
+    "        obj_trial, grad_trial = self.objGrad_func(beta_trial, self.targ_y, objOnly = False)\n",
+    "        self.betas.append(beta_trial)\n",
+    "        self.objs.append(obj_trial)\n",
+    "        self.grads.append(grad_trial)\n",
+    "        \n",
+    "        # Return if obj_trial is smaller than obj\n",
+    "        return obj_trial < self.objs[-2]\n",
+    "    \n",
+    "    # Run gradient descent\n",
+    "    def run(self):\n",
+    "        # Run initial descent\n",
+    "        success = self.firstDescent()\n",
+    "        print(\"=\" * 40)\n",
+    "        print(\"Initial descent: \", success)\n",
+    "        print(\"Relative error of observation: \", torch.sqrt(self.objs[-1]) / torch.linalg.norm(self.targ_y))\n",
+    "        \n",
+    "        # Run max_iters number of iterations\n",
+    "        for i in range(self.max_steps):\n",
+    "            success = self.oneDescent()\n",
+    "            print(\"=\" * 40)\n",
+    "            print(\"The {0}th descent: \".format(i + 1), success)\n",
+    "            print(\"Observation: \", self.objs[-1])\n",
+    "            print(\"Gradient: \", self.grads[-1])\n",
+    "            print(\"Relative error of observation: \", torch.sqrt(self.objs[-1]) / torch.linalg.norm(self.targ_y))\n",
+    "        \n",
+    "        # Return\n",
+    "        return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# One gradient descent example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize a grad example\n",
+    "beta0 = torch.tensor([0.008, 0.012, 2.e-3, 0.58])\n",
+    "myGrad = GradDescent(beta0, v, targ_seq.t, objGrad_func = objGradFunc, max_steps = 10, obs_rtol = 1e-5, lsrh_steps = 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1792902/1684394348.py:4: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  this_RSParams = torch.tensor(beta)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time cost to generate the sequence:  0.30698442459106445\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "DODBeta:  tensor([0., 0., 0., 0.])\n",
+      "Time cost in computing gradients:  0.08248281478881836\n",
+      "Time cost to generate the sequence:  0.26823949813842773\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.3001861572265625\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.2659337520599365\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.26526498794555664\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.26523828506469727\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "DODBeta:  tensor([0., 0., 0., 0.])\n",
+      "Time cost in computing gradients:  0.08209443092346191\n",
+      "========================================\n",
+      "Initial descent:  tensor(False)\n",
+      "Relative error of observation:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.26581287384033203\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "DODBeta:  tensor([0., 0., 0., 0.])\n",
+      "Time cost in computing gradients:  0.08208155632019043\n",
+      "========================================\n",
+      "The 1th descent:  tensor(False)\n",
+      "Observation:  tensor(0.)\n",
+      "Gradient:  tensor([0., 0., 0., 0.])\n",
+      "Relative error of observation:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.3094797134399414\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "DODBeta:  tensor([0., 0., 0., 0.])\n",
+      "Time cost in computing gradients:  0.08253192901611328\n",
+      "========================================\n",
+      "The 2th descent:  tensor(False)\n",
+      "Observation:  tensor(0.)\n",
+      "Gradient:  tensor([0., 0., 0., 0.])\n",
+      "Relative error of observation:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.267352819442749\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "DODBeta:  tensor([0., 0., 0., 0.])\n",
+      "Time cost in computing gradients:  0.0824122428894043\n",
+      "========================================\n",
+      "The 3th descent:  tensor(False)\n",
+      "Observation:  tensor(0.)\n",
+      "Gradient:  tensor([0., 0., 0., 0.])\n",
+      "Relative error of observation:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.2682976722717285\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "DODBeta:  tensor([0., 0., 0., 0.])\n",
+      "Time cost in computing gradients:  0.11524200439453125\n",
+      "========================================\n",
+      "The 4th descent:  tensor(False)\n",
+      "Observation:  tensor(0.)\n",
+      "Gradient:  tensor([0., 0., 0., 0.])\n",
+      "Relative error of observation:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.2721874713897705\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "DODBeta:  tensor([0., 0., 0., 0.])\n",
+      "Time cost in computing gradients:  0.08192825317382812\n",
+      "========================================\n",
+      "The 5th descent:  tensor(False)\n",
+      "Observation:  tensor(0.)\n",
+      "Gradient:  tensor([0., 0., 0., 0.])\n",
+      "Relative error of observation:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.26869702339172363\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "DODBeta:  tensor([0., 0., 0., 0.])\n",
+      "Time cost in computing gradients:  0.08204817771911621\n",
+      "========================================\n",
+      "The 6th descent:  tensor(False)\n",
+      "Observation:  tensor(0.)\n",
+      "Gradient:  tensor([0., 0., 0., 0.])\n",
+      "Relative error of observation:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.2670867443084717\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "DODBeta:  tensor([0., 0., 0., 0.])\n",
+      "Time cost in computing gradients:  0.08382487297058105\n",
+      "========================================\n",
+      "The 7th descent:  tensor(False)\n",
+      "Observation:  tensor(0.)\n",
+      "Gradient:  tensor([0., 0., 0., 0.])\n",
+      "Relative error of observation:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.30219507217407227\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "DODBeta:  tensor([0., 0., 0., 0.])\n",
+      "Time cost in computing gradients:  0.11011910438537598\n",
+      "========================================\n",
+      "The 8th descent:  tensor(False)\n",
+      "Observation:  tensor(0.)\n",
+      "Gradient:  tensor([0., 0., 0., 0.])\n",
+      "Relative error of observation:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.36763834953308105\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "DODBeta:  tensor([0., 0., 0., 0.])\n",
+      "Time cost in computing gradients:  0.08299016952514648\n",
+      "========================================\n",
+      "The 9th descent:  tensor(False)\n",
+      "Observation:  tensor(0.)\n",
+      "Gradient:  tensor([0., 0., 0., 0.])\n",
+      "Relative error of observation:  tensor(0.)\n",
+      "Time cost to generate the sequence:  0.2673938274383545\n",
+      "Relative L2 error:  tensor(0.)\n",
+      "DODBeta:  tensor([0., 0., 0., 0.])\n",
+      "Time cost in computing gradients:  0.11116576194763184\n",
+      "========================================\n",
+      "The 10th descent:  tensor(False)\n",
+      "Observation:  tensor(0.)\n",
+      "Gradient:  tensor([0., 0., 0., 0.])\n",
+      "Relative error of observation:  tensor(0.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "myGrad.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Give an example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 134,
    "metadata": {
     "scrolled": true
    },
@@ -535,7 +871,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time cost to generate the sequence:  0.3029971122741699\n"
+      "Time cost to generate the sequence:  0.3368046283721924\n"
      ]
     },
     {
@@ -563,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 135,
    "metadata": {
     "scrolled": true
    },
@@ -572,7 +908,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time cost to generate the sequence:  0.3014383316040039\n"
+      "Time cost to generate the sequence:  0.32443785667419434\n"
      ]
     },
     {
@@ -599,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -733,40 +1069,6 @@
     "\n",
     "print('Numerical gradient: ', numericalGrad)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.0088)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(OPlus - Obs) / (perturbRatio * new_RSParams[3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
