--- a/MassFricAdj1219.ipynb
+++ b/MassFricAdj1219.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 511,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 512,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 513,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
     "        st = time.time()\n",
     "        self.default_y = self.calculateYAtT(self.t)\n",
     "        self.time_cost = time.time() - st\n",
-    "        print(\"Time cost to generate the sequence: \", self.time_cost)\n",
+    "        # print(\"Time cost to generate the sequence: \", self.time_cost)\n",
     "        \n",
     "    # Function DyDt, DyDt = f(t, y)\n",
     "    def DyDt(self, t, y):\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 520,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
     "        t\n",
     "    )\n",
     "    \n",
-    "    print(\"Relative L2 error: \", torch.sqrt(O) / torch.linalg.norm(v))\n",
+    "    # print(\"Relative L2 error: \", torch.sqrt(O) / torch.linalg.norm(v))\n",
     "    return O\n",
     "\n",
     "    "
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 521,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
     "#         print(\"LT: \", L[-1, :, :])\n",
     "        \n",
     "        # DEBUG LINES \n",
-    "        print('DODBeta: ', DODBeta)\n",
+    "        # print('DODBeta: ', DODBeta)\n",
     "        \n",
     "#         DODBeta += ((self.dodyDot[:, -1] + L[-1, :, :] @ self.dCdyDot[:, :, -1]) @ zT_last).reshape([-1])\n",
     "#         print('DODBeta after boundary term: ', DODBeta)\n",
@@ -504,17 +504,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 539,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time cost to generate the sequence:  0.21280193328857422\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Fixed parameters\n",
     "# Parameters for the spring-slider\n",
@@ -529,8 +521,8 @@
     "NofTPts = 1000\n",
     "\n",
     "# Tolerance parameters\n",
-    "this_rtol = 1.e-6\n",
-    "this_atol = 1.e-8\n",
+    "this_rtol = 1.e-8\n",
+    "this_atol = 1.e-10\n",
     "\n",
     "# Generate target v\n",
     "targ_RSParams = torch.tensor([0.011, 0.016, 1.e-3, 0.58])\n",
@@ -549,14 +541,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 540,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function observation function\n",
     "def objGradFunc(beta, targ_y, objOnly = False):\n",
     "    # Generate target v\n",
-    "    this_RSParams = torch.tensor(beta)\n",
+    "    this_RSParams = beta\n",
     "    this_SpringSlider = MassFricParams(k, m, V, g, this_RSParams, y0)\n",
     "\n",
     "    this_seq = TimeSequenceGen(T, NofTPts, this_SpringSlider, \n",
@@ -663,19 +655,20 @@
     "        # Run initial descent\n",
     "        success = self.firstDescent()\n",
     "        print(\"=\" * 40)\n",
-    "        print(\"Initial descent: \", success)\n",
+    "        print(\"Initial descent succeeds: \", success)\n",
     "        print(\"Relative error of observation: \", torch.sqrt(self.objs[-1]) / torch.linalg.norm(self.targ_y))\n",
     "        \n",
     "        # Run max_iters number of iterations\n",
     "        for i in range(self.max_steps):\n",
     "            success = self.oneDescent()\n",
     "            print(\"=\" * 40)\n",
-    "            print(\"The {0}th descent: \".format(i + 1), success)\n",
-    "            print(\"Observation: \", self.objs[-1])\n",
-    "            print(\"Gradient: \", self.grads[-1])\n",
+    "            print(\"The {0}th descent succeeds: \".format(i + 1), success)\n",
+    "            # print(\"Observation: \", self.objs[-1])\n",
+    "            # print(\"Gradient: \", self.grads[-1])\n",
     "            print(\"Relative error of observation: \", torch.sqrt(self.objs[-1]) / torch.linalg.norm(self.targ_y))\n",
     "        \n",
     "        # Return\n",
+    "        print(\"The final predicted parameters: \", self.betas[-1])\n",
     "        return"
    ]
   },
@@ -688,22 +681,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 543,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize a grad example\n",
-    "beta0 = torch.tensor([0.008, 0.012, 2.e-3, 0.58])\n",
-    "myGrad = GradDescent(beta0, v, targ_seq.t, objGrad_func = objGradFunc, max_steps = 10, obs_rtol = 1e-5, lsrh_steps = 4)"
+    "beta0 = torch.tensor([0.008, 0.012, 2.e-3, 0.6])\n",
+    "myGrad = GradDescent(beta0, v, targ_seq.t, objGrad_func = objGradFunc, \n",
+    "                     max_steps = 20, obs_rtol = 1e-5, lsrh_steps = 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 544,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time cost in computing gradients:  1.8030052185058594\n",
+      "Time cost in computing gradients:  1.7608771324157715\n",
+      "========================================\n",
+      "Initial descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(0.0012)\n",
+      "Time cost in computing gradients:  1.7335889339447021\n",
+      "========================================\n",
+      "The 1th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(0.0010)\n",
+      "Time cost in computing gradients:  1.685044288635254\n",
+      "========================================\n",
+      "The 2th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(0.0009)\n",
+      "Time cost in computing gradients:  1.7309181690216064\n",
+      "========================================\n",
+      "The 3th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(0.0006)\n",
+      "Time cost in computing gradients:  1.6323158740997314\n",
+      "========================================\n",
+      "The 4th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(3.4038e-05)\n",
+      "Time cost in computing gradients:  1.5806281566619873\n",
+      "========================================\n",
+      "The 5th descent succeeds:  tensor(False)\n",
+      "Relative error of observation:  tensor(8.8236e-05)\n",
+      "Time cost in computing gradients:  1.6304702758789062\n",
+      "========================================\n",
+      "The 6th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(1.9949e-05)\n",
+      "Time cost in computing gradients:  1.6346118450164795\n",
+      "========================================\n",
+      "The 7th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(9.9358e-06)\n",
+      "Time cost in computing gradients:  1.5756480693817139\n",
+      "========================================\n",
+      "The 8th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(9.7982e-06)\n",
+      "Time cost in computing gradients:  1.6304152011871338\n",
+      "========================================\n",
+      "The 9th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(9.6843e-06)\n",
+      "Time cost in computing gradients:  1.6105659008026123\n",
+      "========================================\n",
+      "The 10th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(9.3069e-06)\n",
+      "Time cost in computing gradients:  1.6446142196655273\n",
+      "========================================\n",
+      "The 11th descent succeeds:  tensor(False)\n",
+      "Relative error of observation:  tensor(9.3546e-06)\n",
+      "Time cost in computing gradients:  1.5762279033660889\n",
+      "========================================\n",
+      "The 12th descent succeeds:  tensor(False)\n",
+      "Relative error of observation:  tensor(9.4067e-06)\n",
+      "Time cost in computing gradients:  1.5968358516693115\n",
+      "========================================\n",
+      "The 13th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(9.2939e-06)\n",
+      "Time cost in computing gradients:  1.670290231704712\n",
+      "========================================\n",
+      "The 14th descent succeeds:  tensor(False)\n",
+      "Relative error of observation:  tensor(9.5006e-06)\n",
+      "Time cost in computing gradients:  1.6055541038513184\n",
+      "========================================\n",
+      "The 15th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(9.3157e-06)\n",
+      "Time cost in computing gradients:  1.6065001487731934\n",
+      "========================================\n",
+      "The 16th descent succeeds:  tensor(False)\n",
+      "Relative error of observation:  tensor(9.3969e-06)\n",
+      "Time cost in computing gradients:  1.6564788818359375\n",
+      "========================================\n",
+      "The 17th descent succeeds:  tensor(False)\n",
+      "Relative error of observation:  tensor(9.6043e-06)\n",
+      "Time cost in computing gradients:  1.5984199047088623\n",
+      "========================================\n",
+      "The 18th descent succeeds:  tensor(True)\n",
+      "Relative error of observation:  tensor(9.4332e-06)\n",
+      "Time cost in computing gradients:  1.5953710079193115\n",
+      "========================================\n",
+      "The 19th descent succeeds:  tensor(False)\n",
+      "Relative error of observation:  tensor(9.4393e-06)\n",
+      "Time cost in computing gradients:  1.6319301128387451\n",
+      "========================================\n",
+      "The 20th descent succeeds:  tensor(False)\n",
+      "Relative error of observation:  tensor(9.5223e-06)\n",
+      "The final predicted parameters:  tensor([0.0110, 0.0170, 0.0020, 0.5993])\n"
+     ]
+    }
+   ],
    "source": [
     "myGrad.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 526,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([0.0080, 0.0120, 0.0020, 0.5800]),\n",
+       " tensor([0.0086, 0.0132, 0.0020, 0.5798]),\n",
+       " tensor([0.0093, 0.0132, 0.0020, 0.5798]),\n",
+       " tensor([0.0096, 0.0135, 0.0020, 0.5798]),\n",
+       " tensor([0.0102, 0.0139, 0.0020, 0.5798]),\n",
+       " tensor([0.0107, 0.0144, 0.0021, 0.5797]),\n",
+       " tensor([0.0111, 0.0142, 0.0021, 0.5797]),\n",
+       " tensor([0.0109, 0.0144, 0.0021, 0.5797]),\n",
+       " tensor([0.0110, 0.0144, 0.0021, 0.5797]),\n",
+       " tensor([0.0110, 0.0144, 0.0021, 0.5797]),\n",
+       " tensor([0.0110, 0.0144, 0.0021, 0.5797]),\n",
+       " tensor([0.0110, 0.0144, 0.0021, 0.5797])]"
+      ]
+     },
+     "execution_count": 526,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myGrad.betas"
    ]
   },
   {
